--- a/templates/about.html
+++ b/templates/about.html
@@ -16,6 +16,6 @@
     About Us page
     <br>
     <div>
-        <a href="/">Back</a>
+        <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
