--- a/templates/article.html
+++ b/templates/article.html
@@ -26,6 +26,6 @@
     </form>
     <br>
     <div>
-        <a href="/">Back</a>
+        <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
