--- a/templates/create.html
+++ b/templates/create.html
@@ -25,12 +25,12 @@
             </div>
             <br>
             <div>
-                <button id="submit" type="submit" name="submit" value="submit">Send.</button>
+                <button id="submit" type="submit" name="submit" value="submit"><img src="/static/sendmail.svg" alt="sendmail" height="50"></button>
             </div>
         </div>
     </form>
     <br>
     <div>
-        <a href="/communication">Back</a>
+        <a href="/communication"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
