--- a/templates/delete.html
+++ b/templates/delete.html
@@ -25,6 +25,6 @@
     </form>
     <br>
     <div>
-        <a href="/profile">Back</a>
+        <a href="/profile"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
