--- a/templates/forget.html
+++ b/templates/forget.html
@@ -22,6 +22,6 @@
     </form>
     <br>
     <div>
-        <a href="/signin">Back</a>
+        <a href="/signin"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
