--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,6 +35,6 @@
     </div>
     <br>
     <div>
-        <a href="/">Back</a>
+        <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
