--- a/templates/remove.html
+++ b/templates/remove.html
@@ -16,6 +16,6 @@
     Remove page
     <br>
     <div>
-        <a href="/administration">Back</a>
+        <a href="/administration"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
