--- a/static/styles.css
+++ b/static/styles.css
@@ -51,7 +51,7 @@ main {
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: space-between;
-	align-items: stretch;
+	align-items: flex-end;
 	align-content: stretch;
 }
 
@@ -60,7 +60,7 @@ main {
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: flex-start;
-	align-items: stretch;
+	align-items: flex-end;
     align-content: stretch;
 }
 
@@ -393,7 +393,7 @@ button {
 
 
 .CreateMain {
-	height: 450px;
+	height: 500px;
 	border-radius: 25px;
 	border: 2px solid #E8E8E8;
 	padding: 20px; 	
@@ -404,7 +404,18 @@ button {
 
 
 .AddMain {
-	height: 700px;
+	height: 750px;
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 	
+}
+
+
+/*  EDIT  */
+
+
+.EditMain {
+	height: 750px;
 	border-radius: 25px;
 	border: 2px solid #E8E8E8;
 	padding: 20px; 	
@@ -474,4 +485,15 @@ button {
 	border-radius: 25px;
 	border: 2px solid #E8E8E8;
 	padding: 20px; 		
+}
+
+
+/*  CHANGE  */
+
+
+.ChangeMain {
+	height: 500px;
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 	
 }
