--- a/templates/add.html
+++ b/templates/add.html
@@ -42,13 +42,13 @@
             </div>
             <br>
             <div>
-                <button id="submit" type="submit" name="submit" value="submit">Save.</button>
+                <button id="submit" type="submit" name="submit" value="submit"><img src="/static/save.svg" alt="save" height="50"></button>
             </div>
         </div>
     </form>
     <br>
     <div>
-        <a href="/administration">Back</a>
+        <a href="/administration"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
     
 {% endblock %}
