--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
                         <div class="NavBarLeft">
 
                             <div class="click-to-top">
-                                <li class="NavBarLi"><a href="/">Plants</a></li>
+                                <li class="NavBarLi"><a href="/"><img src="/static/plant.svg" alt="plant" height="50"></a></li>
                                     <span>Plants</span>
                             </div>
 
@@ -54,7 +54,7 @@
                             </div>
 
                             <div class="click-to-top">
-                                <li class="NavBarLi"><a href="/about">About</a></li>
+                                <li class="NavBarLi"><a href="/about"><img src="/static/about.svg" alt="about" height="50"></a></li>
                                     <span>About</span>
                             </div>
 
