--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Send
+    <img src="/static/sendmail.svg" alt="sendmail" height="50">
 {% endblock %}
 
 {% block navigation %}
@@ -34,12 +34,12 @@
             </div>
             <br>
             <div>
-                <button id="submit" type="submit" name="submit" value="submit">Send.</button>
+                <button id="submit" type="submit" name="submit" value="submit"><img src="/static/sendmail.svg" alt="sendmail" height="50">.</button>
             </div>
         </div>
         <br>
         <div>
-            <a href="/">Back</a>
+            <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
         </div>
     </form>
 {% endblock %}
