--- a/templates/password.html
+++ b/templates/password.html
@@ -24,13 +24,13 @@
             </div>
             <br>
             <div>
-                <button id="updatePassword" type="submit">Update</button>
+                <button id="updatePassword" type="submit"><img src="/static/save.svg" alt="save" height="50"></button>
             </div>
         </div>
     </form>
     <br>
     <div>
-        <a href="/profile">Back</a>
+        <a href="/profile"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 
     <script>
