--- a/templates/picture.html
+++ b/templates/picture.html
@@ -27,6 +27,6 @@
     </form>
     <br>
     <div>
-        <a href="/profile">Back</a>
+        <a href="/profile"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
