--- a/templates/unconfirmed.html
+++ b/templates/unconfirmed.html
@@ -29,6 +29,6 @@
     </form>
     <br>
     <div>
-        <a href="/signin">Back</a>
+        <a href="/signin"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
