--- a/templates/basket.html
+++ b/templates/basket.html
@@ -47,6 +47,9 @@
                     </tr>
                 </tbody>
             </table>
+            <div>
+                <a href="/pay"><img src="/static/pay.svg" alt="pay" height="50"></a>
+            </div>
         </form>
     </div>
     <br>
