--- a/templates/create.html
+++ b/templates/create.html
@@ -7,7 +7,7 @@
 {% block navigation %}
     {% if role == "admin" %}
         <div class="click-to-top">
-            <li class="NavBarLi"><a href="/administration"><img src="/static/admin.svg" alt="admin" height="50"></a></li>
+            <li class="NavBarLi"><a href="/administration"><img src="/static/addplant.svg" alt="addplant" height="50"></a></li>
                 <span>Manage</span>
         </div>
         <div class="click-to-top">
