--- a/templates/article.html
+++ b/templates/article.html
@@ -7,6 +7,10 @@
 {% block navigation %}
     {% if role == "admin" %}
         <div class="click-to-top">
+            <li class="NavBarLi"><a href="/transaction"><img src="/static/pay.svg" alt="pay" height="50"></a></li>
+                <span>Transaction</span>
+        </div>
+        <div class="click-to-top">
             <li class="NavBarLi"><a href="/administration"><img src="/static/addplant.svg" alt="addplant" height="50"></a></li>
                 <span>Manage</span>
         </div>
