--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,6 +63,11 @@
                                     <span>Contact</span>
                             </div>
 
+                            <div class="click-to-top">
+                                <li class="NavBarLi"><a href="/history"><img src="/static/pay.svg" alt="pay" height="50"></a></li>
+                                    <span>History</span>
+                            </div>
+
                         </div>
                         <div class="NavBarRight">
                             {% block navigation %}{% endblock %}
