--- a/templates/basket.html
+++ b/templates/basket.html
@@ -42,12 +42,12 @@
                 <tbody>
                     {% for basket in baskets %}
                         <tr>
-                            <td><img src="{{ basket[5] }}" alt="plant picture of {{ basket[4] }}" height="50"></td>
-                            <td>{{ basket[4] }}</td>
-                            <td>{{ basket[3] }}</td>
-                            <td>{{ basket[6] }}</td>
-                            <td>{{ basket[7] }},00€</td>
-                            <td><button name="delete" value="{{ basket[0] }}" type="submit"><img src="/static/trash.svg" alt="delete" height="25"></button></td>
+                            <td><img src="{{ basket.picture | safe }}" alt="plant picture of {{ basket.name | safe }}" height="50"></td>
+                            <td>{{ basket.picture | safe }}</td>
+                            <td>{{ basket.name | safe }}</td>
+                            <td>{{ basket.quantity | safe }}</td>
+                            <td>{{ basket.price | safe }},00€</td>
+                            <td><button name="delete" value="{{ basket.id | safe }}" type="submit"><img src="/static/trash.svg" alt="delete" height="25"></button></td>
                         </tr>
                     {% endfor %}
                     <tr>
