--- a/templates/basket.html
+++ b/templates/basket.html
@@ -43,10 +43,10 @@
                     {% for basket in baskets %}
                         <tr>
                             <td><img src="{{ basket.picture | safe }}" alt="plant picture of {{ basket.name | safe }}" height="50"></td>
-                            <td>{{ basket.picture | safe }}</td>
                             <td>{{ basket.name | safe }}</td>
                             <td>{{ basket.quantity | safe }}</td>
-                            <td>{{ basket.price | safe }},00€</td>
+                            <td>{{ basket.price | safe }}</td>
+                            <td>{{ basket.subtotal | safe }},00€</td>
                             <td><button name="delete" value="{{ basket.id | safe }}" type="submit"><img src="/static/trash.svg" alt="delete" height="25"></button></td>
                         </tr>
                     {% endfor %}
