--- a/templates/administration.html
+++ b/templates/administration.html
@@ -44,7 +44,7 @@
                         <tr>
                             <td>{{ plant.name | safe }}</td>
                             <td>{{ plant.stock | safe }}</td>
-                            <td>{{ plant.price | safe }}</td>
+                            <td>{{ plant.price | safe }},00€</td>
                             <td><img src="{{ plant.picture | safe }}" alt="plant picture of {{ plant.name | safe }}" height="50"></td>
                             <td>{{ plant.show | safe }}</td>
                             <td><button name="delete" value="{{ plant.id }}" type="submit"><img src="/static/trash.svg" alt="delete" height="25"></button></td>
