--- a/templates/change.html
+++ b/templates/change.html
@@ -37,7 +37,7 @@
             <br>
             <div>
                 {{ ckeditor.create(value= news[2]) }}
-                {{ ckeditor.load(pkg_type="standard") }}
+                {{ ckeditor.load(custom_url=url_for('static', filename='ckeditor/ckeditor.js')) }}
             </div>
             <br>
             <div>
