--- a/templates/layout.html
+++ b/templates/layout.html
@@ -100,9 +100,9 @@
             </div>
         </nav>
 
-        {% with messages = get_flashed_messages() %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
-            <header class="FlashMain">
+            <header class="FlashMain, {{ category }}">
                 <ul class="FlashList">
                     {% for message in messages %}
                         <li>{{ message }}</li>
