--- a/templates/layout.html
+++ b/templates/layout.html
@@ -100,7 +100,7 @@
             </div>
         </nav>
 
-        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% with messages = get_flashed_messages(with_categories=True) %}
             {% if messages %}
             <header class="FlashMain {{ category }}">
                 <ul class="FlashList">
