--- a/static/styles.css
+++ b/static/styles.css
@@ -267,6 +267,13 @@ main {
 }
 
 .FlashList {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+
 	list-style: none;
 }
 
