--- a/templates/layout.html
+++ b/templates/layout.html
@@ -103,11 +103,12 @@
         {% with messages = get_flashed_messages(with_categories=True) %}
             {% if messages %}
                 {% for category, message in messages %}
-                    <header class="FlashMain {{ category }}">
-                        <ul class="FlashList">
-                            <li>{{ message }}</li>
-                        </ul>
-                    </header>
+                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                        <span>{{ message }}</span>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                 {% endfor %}
             {% endif %}
         {% endwith %}
