--- a/static/styles.css
+++ b/static/styles.css
@@ -238,6 +238,15 @@ main {
 /*  FLASH  */
 
 
+.Flash {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+}
+
 .alert {
 	width: 500px;
 }
