--- a/static/styles.css
+++ b/static/styles.css
@@ -21,6 +21,9 @@ main {
 	align-content: center;
 
 	text-align: center;
+	border-radius: 25px;
+	border: 2px solid #09733A;
+	padding: 20px; 
 }
 
 
