--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,9 @@
 
     <body>
         <nav class="NavBarMain">
-            <a href="/"><span>Crazy Plant Crew</span></a>
+            <div class="NavBarLogo">
+                <a href="/"><span>Crazy Plant Crew</span></a>
+            </div>
             <div>
                 {% if session.user_id %}
                     <ul class="NavBarRow">
