--- a/templates/logged.html
+++ b/templates/logged.html
@@ -33,6 +33,6 @@
     Users page
     <br>
     <div>
-        <a href="/administration"><img src="/static/back.svg" alt="back" height="50"></a>
+        <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
