--- a/static/styles.css
+++ b/static/styles.css
@@ -509,3 +509,16 @@ button {
 	border: 2px solid #E8E8E8;
 	padding: 20px; 	
 }
+
+
+/*  LOGGED  */
+
+
+.loggedMain {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: flex-start;
+	align-content: center;
+}
