--- a/static/styles.css
+++ b/static/styles.css
@@ -518,7 +518,16 @@ button {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-items: flex-start;
+	justify-content: center;
+	align-items: center;
 	align-content: center;
+}
+
+.loggedDiv {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: flex-start;
+	align-content: stretch;
 }
