--- a/templates/logged.html
+++ b/templates/logged.html
@@ -31,7 +31,7 @@
 
 {% block main %}
     <div class="loggedMain">
-        <div>
+        <div class="loggedDiv">
             Total user list: {{ users | length }}
             <ul>
             {% for user in users %}
@@ -40,7 +40,7 @@
             </ul>
         </div>
         <br>
-        <div>
+        <div class="loggedDiv">
             Total admin list: {{ admins | length }}
             <ul>
             {% for admin in admins %}
@@ -49,7 +49,7 @@
             </ul>
         </div>
         <br>
-        <div>
+        <div class="loggedDiv">
             Total unconfirmed list: {{ unconfirmeds | length }}
             <ul>
             {% for unconfirmed in unconfirmeds %}
@@ -58,6 +58,7 @@
             </ul>
         </div>
     </div>
+
     <br>
     <div>
         <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
