--- a/static/styles.css
+++ b/static/styles.css
@@ -529,3 +529,12 @@ button {
 	align-items: flex-start;
 	align-content: flex-start;
 }
+
+.loggedDiv ul {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	align-items: flex-start;
+	align-content: flex-start;
+}
