--- a/static/styles.css
+++ b/static/styles.css
@@ -521,15 +521,6 @@ button {
 	padding: 20px; 	
 }
 
-.loggedDiv {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-items: flex-start;
-	align-content: flex-start;
-}
-
 .loggedDiv ul {
 	display: flex;
 	flex-direction: column;
@@ -537,4 +528,8 @@ button {
 	justify-content: flex-start;
 	align-items: flex-start;
 	align-content: flex-start;
+
+	width: 250px;
+	height: 125px;
+	overflow: scroll;
 }
